--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 
     <div class="nuotraukos">
       <div class="">
-      <img class="kvadratines-nuotraukos" src="/app/img/zali lapai.png" alt="#">
-      <img class="kvadratines-nuotraukos" src="/app/img/darzoves.png" alt="#">
+      <img class="kvadratines-nuotraukos" src="app/img/zali lapai.png" alt="#">
+      <img class="kvadratines-nuotraukos" src="app/img/darzoves.png" alt="#">
       </div>
-      <img class="batu-nuotrauka" src="/app/img/batai.png" alt="batu-nuotrauka">
+      <img class="batu-nuotrauka" src="app/img/batai.png" alt="batu-nuotrauka">
     </div>
   
     </div>
