--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section class="features-panel-2">
 
       <div class="big-logo">
-        <img src="/app/img/cheshire-county-hygiene-services.svg" alt="big logo">
+        <img src="app/img/cheshire-county-hygiene-services.svg" alt="big logo">
       </div>
 
       <div class="features-panel-2-text">
@@ -141,7 +141,7 @@
         <h1>Erat tempor tempus erat malesuada</h1>
 
         <div class="orange-line">
-            <img src="/app/img/divider_orange_u7 copy 4.svg" alt="devider">
+            <img src="app/img/divider_orange_u7 copy 4.svg" alt="devider">
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
 
@@ -175,7 +175,7 @@
 
       <div id="our-process-panel" class="why-awesome">
         <h1>Why this is awesome</h1>
-        <div class="orange-line"><img src="../img/divider_orange_u7 copy 3.svg" alt=""></div>
+        <div class="orange-line"><img src="app/img/divider_orange_u7 copy 3.svg" alt=""></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
 
@@ -206,7 +206,7 @@
 
       <div class="pricing-options">
         <h1>Pricing options</h1>
-        <div class="green-line"><img src="/app/img/divider_orange_u7 copy.png" alt=""></div>
+        <div class="green-line"><img src="app/img/divider_orange_u7 copy.png" alt=""></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
 
@@ -310,7 +310,7 @@
       <div class="customers-saying">
         <h1>What our customers are saying</h1>
         <div class="blue-line">
-          <img src="/app/img/blue line.svg" alt="blue-line">
+          <img src="app/img/blue line.svg" alt="blue-line">
         </div>
       </div>
 
@@ -324,7 +324,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex.</p>
           </div>
           <div class="people-name-and-face">
-          <div class="face-picture"><img src="/app/img/face-picture.png" alt="face-picture"></div>
+          <div class="face-picture"><img src="app/img/face-picture.png" alt="face-picture"></div>
           <div class="name">
             <h6>Jeremy H.</h6>
             <p>Manager</p>
@@ -336,7 +336,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita.</p>
           </div>
           <div class="people-name-and-face">
-          <div class="face-picture"><img src="/app/img/face-picture.png" alt="face-picture"></div>
+          <div class="face-picture"><img src="app/img/face-picture.png" alt="face-picture"></div>
           <div class="name">
             <h6>John S.</h6>
             <p>Freelancer</p>
@@ -348,7 +348,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus accusamus expedita repellat similique odio aspernatur ex.</p>
           </div>
           <div class="people-name-and-face">
-          <div class="face-picture"><img src="/app/img/face-picture.png" alt="face-picture"></div>
+          <div class="face-picture"><img src="app/img/face-picture.png" alt="face-picture"></div>
           <div class="name">
             <h6>Susan W.</h6>
             <p>Photographer</p>
